@@ -87,6 +87,7 @@ exclude_filename  = cpanfile
 ; So apparently order matters
 [ReadmeAnyFromPod]
 [Signature]
+[ShareDir]
 [AbstractFromPOD]
 [LicenseFromModule]
 [VersionFromModule]
